# avatar

./: .env.example  .gitignore  CLAUDE.md  QUICKSTART.md  README.md  audio_diagnostic.jsonl  audit.md  pyproject.toml
claude_dev/: debug_utils.py  mock_daily_transport.py  mock_unreal_server.py  test_udp_connection.py
docs/: CONFIGURATION_NOTES.md  NETWORK_SETUP.md  PROGRESS.md  SESSION_SUMMARY.md  unreal_websocket_interface_advanced.py
examples/: run_core_only.py  run_with_unreal.py  simple_unreal.py  test_pipeline_debug.py  test_pipeline_with_mocks.py  test_processors.py
src/avatar/: __init__.py
src/avatar/config/: __init__.py  settings.py
src/avatar/pipeline/: __init__.py  main_pipeline.py
src/avatar/processors/: __init__.py  audio_diagnostic.py  frame_tracer.py  ndi_input_transport.py  ndi_output_processor.py  null_audio_sink.py  unreal_audio_streamer.py  unreal_event_processor.py
tests/: __init__.py  conftest.py
tests/debug/: test_elevenlabs_chunks.py
tests/integration/: __init__.py  test_full_pipeline.py  test_ndi_input_transport.py
tests/unit/: test_unreal_audio_streamer.py  test_unreal_event_processor.py
